--- a/Pacman/Other/packages.config
+++ b/Pacman/Other/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
+<packages xmlns="urn:packages ">
   <package id="Microsoft.VisualStudio.Designer.Interfaces" version="1.1.4323" targetFramework="net472" />
 </packages>
