--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.Designer.Interfaces, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <HintPath>..\packages\Microsoft.VisualStudio.Designer.Interfaces.1.1.4323\lib\net11\Microsoft.VisualStudio.Designer.Interfaces.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,24 +43,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bonus.cs" />
+    <Compile Include="Interfases\IIndestructible.cs" />
+    <Compile Include="Obstacles\HorizontalObstacle.cs" />
+    <Compile Include="Obstacles\LeftDownObstacle.cs" />
+    <Compile Include="Obstacles\LeftTopObstacle.cs" />
+    <Compile Include="Obstacles\RightDownObstacle.cs" />
+    <Compile Include="Obstacles\RightTopObstacle.cs" />
+    <Compile Include="Points\BigPoint.cs" />
+    <Compile Include="Ghosts\BlueGhost.cs" />
+    <Compile Include="BaseClasses\Bonus.cs" />
+    <Compile Include="Bonuses\BonusCherry.cs" />
+    <Compile Include="Bonuses\BonusFreezing.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="Coordinate.cs" />
-    <Compile Include="EnumBonus.cs" />
+    <Compile Include="Interfases\IMovable.cs" />
     <Compile Include="Maze.cs" />
-    <Compile Include="Ghost.cs" />
-    <Compile Include="Obstacle.cs" />
+    <Compile Include="BaseClasses\Ghost.cs" />
+    <Compile Include="Obstacles\Obstacle.cs" />
+    <Compile Include="Ghosts\OrangeGhost.cs" />
     <Compile Include="Pacman.cs" />
-    <Compile Include="Point.cs" />
+    <Compile Include="Ghosts\PinkGhost.cs" />
+    <Compile Include="Points\Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Subject.cs" />
-    <Compile Include="Thing.cs" />
+    <Compile Include="Ghosts\RedGhost.cs" />
+    <Compile Include="BaseClasses\Subject.cs" />
+    <Compile Include="BaseClasses\Thing.cs" />
+    <Compile Include="Obstacles\VerticalObstacle.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
-    <None Include="packages.config" />
+    <None Include="Other\App.config" />
+    <None Include="Other\ClassDiagram1.cd" />
+    <None Include="Other\packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
